src/test/resources/entity_test/invalid/Employee1.entity
Employee // no { } 
    id : integer {@Id};  